--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <p>Since 1884, the Institute of Electrical and Electronics Engineers (IEEE) is largest professional society in the world dedicated to advancing technological innovation and excellence for the benefit of humanity. IEEE and its members inspire a global community through IEEE’s highly cited publications, conferences, technology standards, and professional and educational activities. Despite its original charter as the Institute for Electrical and Electronics Engineers, the organization’s scope of interest has expanded into a range of diverse fields, that is is simply referred to by the letters I-E-E-E (pronounced “Eye-triple-E”).</p>
 
-<p>Here at Orange County IEEE for Young Professionals, our OC IEEE Young Professionals Branch was founded in by Irvin Huang and David Huang. Today, most of our members work in professional world or continue their education beyond the bachelor degree. In the past we have also held high esteem in the realm of academic organizations.</p>
+<p>Here at Orange County IEEE for Young Professionals, our IEEE Branch was founded in by Irvin Huang and David Huang. Today, most of our members work in professional world or continue their education beyond the bachelor degree. In the past we have also held high esteem in the realm of academic organizations.</p>
       </section>
 
     </div>
