--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <h1>OC IEEE YP</h1>
           <p>Orange County IEEE for Young Professionals</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/oc-ieee-yp">oc-ieee-yp</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits left">Project maintained by <a href="https://github.com/oc-ieee-yp">OC-IEEE-YP</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Thanks to <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         <p>Since 1884, the Institute of Electrical and Electronics Engineers (IEEE, pronounced “Eye-triple-E”) is the largest professional society in the world dedicated to advancing technological innovation and excellence for the benefit of humanity. IEEE and its members inspire a global community through IEEE’s highly cited publications, conferences, technology standards, and professional and educational activities. Despite its original charter as the Institute for Electrical and Electronics Engineers, the organization’s scope of interest has expanded into a range of diverse fields.</p>
