--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   </head>
   <body>
-      <div id="header">
+      <div id="header" align="left">
         <nav>
           <li class="fork"><a href="https://github.com/oc-ieee-yp">View On GitHub</a></li>
         </nav>
