--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
   </head>
   <body>
+        <div id="header" align="center">
+        <nav>
+          <li class="fork"><a href="https://github.com/oc-ieee-yp">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
 
     <div class="wrapper">
 
