--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
              <p></p>
 
 
-      <div id="title">
+      <div id="space">
+          <hr>
+      </div>
+      <div id="photo">
           <h1>OC IEEE YP Photo Galley</h1>
           <p>Insight into Minds at Work</p>
           <hr>
