--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div id="space">
           <hr>
       </div>
-      <div id="photo">
+      <div id="title">
           <h1>OC IEEE YP Photo Galley</h1>
           <p>Insight into Minds at Work</p>
           <hr>
