--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       </div>
       <div id="title">
           <h1>OC IEEE YP Photo Galley</h1>
-          <p>Insight into Minds at Work</p>
+          <p>Orange County IEEE for Young Professionals</p>
           <hr>
-      </div>
+         </div>
 
 
 
