--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <hr>
       </div>
       <div id="title">
-          <h1>OC IEEE YP Photo Galley</h1>
-          <p>Orange County IEEE for Young Professionals</p>
+          <h1>Photo Galley</h1>
+          <p>Insight into Minds at Work</p>
           <hr>
          </div>
 
