--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
          </div>
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_2920436_608464789178620_1422828902_o.jpg" />
-         <p><a href="http://oc-ieee-yp.github.io/">Robert Moreno helps out a student with science. </a></p>
+         <a href="http://oc-ieee-yp.github.io/">Robert Moreno helps out a student with science. </a>
 
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965037_608463595845406_1985920267_o.jpg" />
-    <p><a href="http://oc-ieee-yp.github.io/">Students excited about robotics.</a></p>
+    <a href="http://oc-ieee-yp.github.io/">Students excited about robotics.</a>
 
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965165_608463895845376_649695534_o.jpg" />
-    <p><a href="http://oc-ieee-yp.github.io/">Jordan Linford cranks up the volume to demonstrate physics. </a></p>
+    <a href="http://oc-ieee-yp.github.io/">Jordan Linford cranks up the volume to demonstrate physics. </a>
 
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965972_608463199178779_1131449204_o.jpg" />
-    <p><a href="http://oc-ieee-yp.github.io/">Salvador Deniz smiles at the electronics behind him. </a></p>
+    <a href="http://oc-ieee-yp.github.io/">Salvador Deniz smiles at the electronics behind him. </a>
 
  
  
