--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          </div>
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_2920436_608464789178620_1422828902_o.jpg" />
-         <a href="http://oc-ieee-yp.github.io/">Robert Moreno helps out a student with science. </a>
+         <p><a href="http://oc-ieee-yp.github.io/">Robert Moreno helps out a student with science. </a></p>
 
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965037_608463595845406_1985920267_o.jpg" />
