--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
          <p><a href="http://oc-ieee-yp.github.io/">Robert Moreno helps out a student with science. </a></p>
 
 
-        <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965037_608463595845406_1985920267_o.jpg" />
+        <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965037_608463595845406_1985920267_o.jpg" width="50%" height = "50%" />
     <p><a href="http://oc-ieee-yp.github.io/">Students excited about robotics.</a></p>
 
 
