--- a/index.html
+++ b/index.html
@@ -46,17 +46,12 @@
       </div>
       <div id="title">
           <h1>Photo Galley</h1>
-          <p>Insight into Minds at Work</p>
+          Insight into Minds at Work
           <hr>
          </div>
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_2920436_608464789178620_1422828902_o.jpg" />
          <p><a href="http://oc-ieee-yp.github.io/">Robert Moreno helps out a student with science. </a></p>
-
-
-        <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965037_608463595845406_1985920267_o.jpg" width="50%" height = "50%" />
-    <p><a href="http://oc-ieee-yp.github.io/">Students excited about robotics.</a></p>
-
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965165_608463895845376_649695534_o.jpg" />
     <p><a href="http://oc-ieee-yp.github.io/">Jordan Linford cranks up the volume to demonstrate physics. </a></p>
