--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       </div>
       <div id="title">
           <h1>Photo Galley</h1>
-          Insight into Minds at Work
-          <hr>
+          <p>Insight into Minds at Work</p>
          </div>
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_2920436_608464789178620_1422828902_o.jpg" />
