--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           <p></p>
           <hr>
       </div>
+      <div id="space">
+                <h1></h1>
+          <p></p>
+          <hr>
+      </div>
       <div id="title">
           <h1>Photo Galley</h1>
           <p>Insight into Minds at Work</p>
