--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.6430934027912!2d-117.84429600000004!3d33.64049499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x79fbc5d0b6dab7ec!2sUniversity+of+California+Irvine!5e0!3m2!1sen!2sus!4v1404938084119" width="98%" height="220" frameborder="0" style="border:0"></iframe>
-      
+               <p><a href="http://oc-ieee-yp.github.io/">UC Irvine/Orange County Map. </a></p>
+
 
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_2920436_608464789178620_1422828902_o.jpg" />
          <p><a href="http://oc-ieee-yp.github.io/">Robert Moreno helps out a student with science. </a></p>
