--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img src="https://raw.githubusercontent.com/oc-ieee-yp/oc-ieee-yp.github.io/master/images/rsz_1965972_608463199178779_1131449204_o.jpg" />
     <p><a href="http://oc-ieee-yp.github.io/">Salvador Deniz smiles at the electronics behind him. </a></p>
 
-   <span class="credits left">Project maintained by <a href="https://github.com/oc-ieee-yp">OC-IEEE-YP (2014)</a> with love</span>
+   <span class="credits left">Project maintained by <a href="https://github.com/oc-ieee-yp">OC-IEEE-YP</a> with love</span>
         
       </section>
 
